--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
+    "react-hook-form": "^7.43.5",
     "sequelize": "^6.21.4"
   },
   "devDependencies": {
