--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/styled-engine-sc": "^5.11.11",
     "@mui/system": "^5.11.11",
     "bcrypt": "^5.0.1",
+    "date-fns": "^2.29.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
@@ -39,8 +40,8 @@
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
     "nodemon": "^2.0.19",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "redux": "^4.2.0",
