--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
     "react-hook-form": "^7.43.5",
+    "react-icons": "^4.8.0",
     "sequelize": "^6.21.4"
   },
   "devDependencies": {
