--- a/package.json
+++ b/package.json
@@ -33,14 +33,11 @@
     "pg": "^8.8.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
-    "sequelize": "^6.21.4"
-  },
-  "devDependencies": {
+    "sequelize": "^6.21.4",
     "@babel/core": "^7.18.13",
     "@babel/preset-react": "^7.18.6",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
-    "nodemon": "^2.0.19",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
@@ -50,5 +47,8 @@
     "redux-thunk": "^2.4.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
